Fixed Footer-Midbar on Mobile

--- a/Resources/Public/Css/spectre.css
+++ b/Resources/Public/Css/spectre.css
@@ -2132,7 +2132,10 @@ a {
       font-weight: 400; }
     @media screen and (max-width: 1024px) {
       #footer #footer-midbar {
-        padding-left: 22px; } }
+        padding-left: 22px; }
+        #footer #footer-midbar #footer-midbar-inner {
+          margin-left: 0;
+          margin-right: 0; } }
   #footer #footer-bottombar {
     background: #27697E; }
   #footer #footer-bottombar p {
